--- a/css/index.css
+++ b/css/index.css
@@ -496,14 +496,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #9d9e9d;
+
 
 }
 
 .tabbar ul li span:nth-of-type(1) {
   font-size: 20px;
+  color:#000
 }
 
-.tabbar ul li.active {
+.tabbar ul li.active span {
   color: #0EB6FF;
 }
 
