--- a/css/global.css
+++ b/css/global.css
@@ -11,6 +11,18 @@ img {
   box-sizing: border-box;
 }
 
+
+input,
+textarea,
+button,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+
+
+
+
 body {
   font: 12px/1.5 Microsoft YaHei;
   background-color: #F5F5F5;
